--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -1,12 +1,16 @@
-name: Android Prerelease Build
+name: Android Prerelease Build and Publish
 
 on:
   push:
     tags:
+      # Se dispara con tags como 'Android-prerelease-v1.2.3'
       - 'Android-prerelease-v[0-9]+.[0-9]+.[0-9]+'
 
+permissions:
+  contents: write
+
 jobs:
-  build:
+  build-and-release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -27,11 +31,26 @@ jobs:
       - name: Get Flutter dependencies
         run: flutter pub get
 
-      - name: Build Android App Bundle
-        run: flutter build appbundle --release
+      - name: Build Android APK
+        run: flutter build apk --release
 
-      - name: Upload App Bundle
-        uses: actions/upload-artifact@v4
+      - name: Create GitHub Pre-release
+        id: create_release # Se le da un ID para referenciarlo después
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          name: app-release-bundle
-          path: build/app/outputs/bundle/release/app-release.aab
+          tag_name: ${{ github.ref_name }}
+          release_name: Release ${{ github.ref_name }}
+          draft: false
+          prerelease: true
+
+      - name: Upload APK to Pre-release
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: build/app/outputs/flutter-apk/app-release.apk
+          asset_name: app-release.apk
+          asset_content_type: application/vnd.android.package-archive
